"""
Handlers for MAX bot using umaxbot
"""
import logging

from maxbot.dispatcher import Dispatcher
from maxbot.bot import Bot
from maxbot.types import Message, InlineKeyboardMarkup, InlineKeyboardButton

from config import settings

logger = logging.getLogger(__name__)

# –û–ø—Ü–∏–æ–Ω–∞–ª—å–Ω—ã–π –∏–º–ø–æ—Ä—Ç ML —Å–µ—Ä–≤–∏—Å–∞ —á–µ—Ä–µ–∑ gRPC
try:
    from grpc_client import get_ml_client
    
    # Check ML service availability
    ml_client = get_ml_client()
    ML_SERVICE_AVAILABLE = ml_client.health_check()
    
    if ML_SERVICE_AVAILABLE:
        logger.info("ML service is available via gRPC")
    else:
        logger.warning("ML service health check failed")
except Exception as e:
    logger.warning(f"ML service not available: {e}. Bot will work but won't answer questions.")
    ML_SERVICE_AVAILABLE = False
    ml_client = None


def setup_handlers(dp: Dispatcher, bot: Bot):
    """
    Setup all bot handlers
    
    Args:
        dp: Dispatcher instance
        bot: Bot instance
    """
    
    @dp.message()
    async def handle_message(message: Message):
        """Handle all other messages (questions)"""
        text = message.text.strip() if message.text else ""
        chat_id = message.chat.id
        
        if not text:
            return
        
        # Handle commands
        if text == '/start':
            logger.info(f"Received /start from chat {chat_id}")
            await bot.send_message(
                chat_id=chat_id,
                text=(
                    "üëã –ü—Ä–∏–≤–µ—Ç! –Ø ‚Äî Arasaka, –ø–æ–º–æ—â–Ω–∏–∫ –ø–æ –æ–±—Ä–∞–∑–æ–≤–∞—Ç–µ–ª—å–Ω—ã–º –≤–æ–ø—Ä–æ—Å–∞–º.\n\n"
                    "–ü–æ–º–æ–≥—É –Ω–∞–π—Ç–∏ –æ—Ç–≤–µ—Ç—ã –Ω–∞ –≤–æ–ø—Ä–æ—Å—ã –æ–± —É—á—ë–±–µ:\n"
                    "üìö –ü—Ä–æ–≥—Ä–∞–º–º—ã –æ–±—É—á–µ–Ω–∏—è –∏ —Å–ø–µ—Ü–∏–∞–ª—å–Ω–æ—Å—Ç–∏\n"
                    "üìù –≠–∫–∑–∞–º–µ–Ω—ã –∏ —Ç—Ä–µ–±–æ–≤–∞–Ω–∏—è –∫ –ø–æ—Å—Ç—É–ø–ª–µ–Ω–∏—é\n"
                    "üìÖ –°—Ä–æ–∫–∏ –ø–æ–¥–∞—á–∏ –¥–æ–∫—É–º–µ–Ω—Ç–æ–≤\n"
                    "üè† –û–±—â–µ–∂–∏—Ç–∏—è –∏ —Å—Ç–∏–ø–µ–Ω–¥–∏–∏\n"
                    "üìñ –£—á–µ–±–Ω—ã–µ –ø–ª–∞–Ω—ã –∏ —Ä–∞—Å–ø–∏—Å–∞–Ω–∏–µ\n\n"
                    "–ü—Ä–æ—Å—Ç–æ –∑–∞–¥–∞–π—Ç–µ —Å–≤–æ–π –≤–æ–ø—Ä–æ—Å!\n\n"
                    "üí° –ö–æ–º–∞–Ω–¥—ã:\n"
                    "/help - –ø—Ä–∏–º–µ—Ä—ã –≤–æ–ø—Ä–æ—Å–æ–≤\n"
                    "/info - –æ –±–æ—Ç–µ"
                ),
                notify=True
            )
            return
        
        if text == '/help':
            logger.info(f"Received /help from chat {chat_id}")
            await bot.send_message(
                chat_id=chat_id,
                text=(
                    "üìö –ü—Ä–∏–º–µ—Ä—ã –≤–æ–ø—Ä–æ—Å–æ–≤:\n\n"
                    "–û –ø–æ—Å—Ç—É–ø–ª–µ–Ω–∏–∏:\n"
                    "‚Ä¢ \"–ö–∞–∫–∏–µ –¥–æ–∫—É–º–µ–Ω—Ç—ã –Ω—É–∂–Ω—ã –¥–ª—è –ø–æ—Å—Ç—É–ø–ª–µ–Ω–∏—è?\"\n"
                    "‚Ä¢ \"–ö–æ–≥–¥–∞ –Ω–∞—á–∏–Ω–∞–µ—Ç—Å—è –ø—Ä–∏—ë–º –¥–æ–∫—É–º–µ–Ω—Ç–æ–≤?\"\n"
                    "‚Ä¢ \"–ö–∞–∫–∏–µ —ç–∫–∑–∞–º–µ–Ω—ã –Ω—É–∂–Ω–æ —Å–¥–∞–≤–∞—Ç—å –Ω–∞ –ø—Ä–æ–≥—Ä–∞–º–º–∏—Ä–æ–≤–∞–Ω–∏–µ?\"\n"
                    "‚Ä¢ \"–ï—Å—Ç—å –ª–∏ –±—é–¥–∂–µ—Ç–Ω—ã–µ –º–µ—Å—Ç–∞?\"\n\n"
                    "–û–± –æ–±—É—á–µ–Ω–∏–∏:\n"
                    "‚Ä¢ \"–ö–∞–∫–∏–µ —Å–ø–µ—Ü–∏–∞–ª—å–Ω–æ—Å—Ç–∏ –µ—Å—Ç—å –≤ –≤—É–∑–µ?\"\n"
                    "‚Ä¢ \"–°–∫–æ–ª—å–∫–æ –¥–ª–∏—Ç—Å—è –æ–±—É—á–µ–Ω–∏–µ?\"\n"
                    "‚Ä¢ \"–ï—Å—Ç—å –ª–∏ –æ–±—â–µ–∂–∏—Ç–∏–µ –¥–ª—è –∏–Ω–æ–≥–æ—Ä–æ–¥–Ω–∏—Ö?\"\n"
                    "‚Ä¢ \"–ö–∞–∫–∞—è —Å—Ç–∏–ø–µ–Ω–¥–∏—è –¥–ª—è –æ—Ç–ª–∏—á–Ω–∏–∫–æ–≤?\"\n\n"
                    "üí° –§–æ—Ä–º—É–ª–∏—Ä—É–π—Ç–µ –≤–æ–ø—Ä–æ—Å –∫–æ–Ω–∫—Ä–µ—Ç–Ω–æ –¥–ª—è –ª—É—á—à–µ–≥–æ —Ä–µ–∑—É–ª—å—Ç–∞—Ç–∞!"
                ),
                notify=True
            )
            return
        
        if text == '/info':
            logger.info(f"Received /info from chat {chat_id}")
            await bot.send_message(
                chat_id=chat_id,
                text=(
                    "‚ÑπÔ∏è –û –±–æ—Ç–µ Arasaka:\n\n"
                    "–Ø ‚Äî –æ–±—Ä–∞–∑–æ–≤–∞—Ç–µ–ª—å–Ω—ã–π –ø–æ–º–æ—â–Ω–∏–∫ –Ω–∞ –±–∞–∑–µ –∏—Å–∫—É—Å—Å—Ç–≤–µ–Ω–Ω–æ–≥–æ –∏–Ω—Ç–µ–ª–ª–µ–∫—Ç–∞. "
                    "–ü–æ–º–æ–≥–∞—é —Å—Ç—É–¥–µ–Ω—Ç–∞–º –∏ –∞–±–∏—Ç—É—Ä–∏–µ–Ω—Ç–∞–º –±—ã—Å—Ç—Ä–æ –Ω–∞—Ö–æ–¥–∏—Ç—å –Ω—É–∂–Ω—É—é –∏–Ω—Ñ–æ—Ä–º–∞—Ü–∏—é.\n\n"
                    "üéì –ß—Ç–æ —è –∑–Ω–∞—é:\n"
                    "‚Ä¢ –ü—Ä–∞–≤–∏–ª–∞ –ø—Ä–∏—ë–º–∞ –∏ –ø–æ—Å—Ç—É–ø–ª–µ–Ω–∏—è\n"
                    "‚Ä¢ –û–±—Ä–∞–∑–æ–≤–∞—Ç–µ–ª—å–Ω—ã–µ –ø—Ä–æ–≥—Ä–∞–º–º—ã –∏ —Å–ø–µ—Ü–∏–∞–ª—å–Ω–æ—Å—Ç–∏\n"
                    "‚Ä¢ –¢—Ä–µ–±–æ–≤–∞–Ω–∏—è –∫ –¥–æ–∫—É–º–µ–Ω—Ç–∞–º –∏ —ç–∫–∑–∞–º–µ–Ω–∞–º\n"
                    "‚Ä¢ –ò–Ω—Ñ–æ—Ä–º–∞—Ü–∏—é –æ–± –æ–±—â–µ–∂–∏—Ç–∏—è—Ö –∏ —Å—Ç–∏–ø–µ–Ω–¥–∏—è—Ö\n"
                    "‚Ä¢ –£—á–µ–±–Ω—ã–µ –ø–ª–∞–Ω—ã –∏ —Ä–∞—Å–ø–∏—Å–∞–Ω–∏—è\n\n"
                    "üìö –í—Å–µ –æ—Ç–≤–µ—Ç—ã –æ—Å–Ω–æ–≤–∞–Ω—ã –Ω–∞ –æ—Ñ–∏—Ü–∏–∞–ª—å–Ω–æ–π –∏–Ω—Ñ–æ—Ä–º–∞—Ü–∏–∏ —É—á–µ–±–Ω–æ–≥–æ –∑–∞–≤–µ–¥–µ–Ω–∏—è"
                ),
                notify=True
            )
            return
        
        # All other messages are questions
        logger.info(f"Received question from chat {chat_id}: {text[:50]}...")
        
        # Send "thinking" message
        thinking_msg = await bot.send_message(
            chat_id=chat_id,
            text="üîç –ò—â—É –æ—Ç–≤–µ—Ç...",
            notify=False
        )
        
        thinking_msg_id = thinking_msg.get("message_id") if isinstance(thinking_msg, dict) else None
        
        # Check if ML service is available
        if not ML_SERVICE_AVAILABLE:
            error_text = (
                "‚ö†Ô∏è –°–µ—Ä–≤–∏—Å –ø–æ–∏—Å–∫–∞ –æ—Ç–≤–µ—Ç–æ–≤ –≤—Ä–µ–º–µ–Ω–Ω–æ –Ω–µ–¥–æ—Å—Ç—É–ø–µ–Ω.\n\n"
                "–ü–æ–∂–∞–ª—É–π—Å—Ç–∞, –ø–æ–ø—Ä–æ–±—É–π—Ç–µ –ø–æ–∑–∂–µ –∏–ª–∏ –∏—Å–ø–æ–ª—å–∑—É–π—Ç–µ –∫–æ–º–∞–Ω–¥—ã /start, /help, /info"
            )
            
            if thinking_msg_id:
                try:
                    await bot.edit_message(
                        chat_id=chat_id,
                        message_id=thinking_msg_id,
                        text=error_text
                    )
                except:
                    await bot.send_message(
                        chat_id=chat_id,
                        text=error_text,
                        notify=True
                    )
            else:
                await bot.send_message(
                    chat_id=chat_id,
                    text=error_text,
                    notify=True
                )
            return
        
        try:
            # Search for answers via gRPC ML service
            results = ml_client.search_answers(
                query=text,
                limit=settings.search_limit,
                score_threshold=settings.search_threshold
            )
            
            logger.info(f"Search query: '{text}', found {len(results) if results else 0} results")
            
            if results and len(results) > 0:
                # Get the best answer
                best_result = results[0]
                answer_text = best_result['answer']['text']
                
                # Format response
                response = f"üí° –û—Ç–≤–µ—Ç:\n\n{answer_text}"
                
                # Update or send message with answer
                if thinking_msg_id:
                    try:
                        await bot.edit_message(
                            chat_id=chat_id,
                            message_id=thinking_msg_id,
                            text=response,
                            format="markdown"
                        )
                    except:
                        # If edit fails, send new message
                        await bot.send_message(
                            chat_id=chat_id,
                            text=response,
                            notify=True,
                            format="markdown"
                        )
                else:
                    await bot.send_message(
                        chat_id=chat_id,
                        text=response,
                        notify=True,
                        format="markdown"
                    )
                
                logger.info(f"Sent answer to chat {chat_id}")
            else:
                # No results found
                error_text = (
                    "‚ùå –ö —Å–æ–∂–∞–ª–µ–Ω–∏—é, —è –Ω–µ —Å–º–æ–≥ –Ω–∞–π—Ç–∏ –ø–æ–¥—Ö–æ–¥—è—â–∏–π –æ—Ç–≤–µ—Ç –Ω–∞ –≤–∞—à –≤–æ–ø—Ä–æ—Å.\n\n"
                    "–ü–æ–ø—Ä–æ–±—É–π—Ç–µ –ø–µ—Ä–µ—Ñ–æ—Ä–º—É–ª–∏—Ä–æ–≤–∞—Ç—å –≤–æ–ø—Ä–æ—Å –∏–ª–∏ –∏—Å–ø–æ–ª—å–∑—É–π—Ç–µ –¥—Ä—É–≥–∏–µ –∫–ª—é—á–µ–≤—ã–µ —Å–ª–æ–≤–∞."
                )
                
                if thinking_msg_id:
                    try:
                        await bot.edit_message(
                            chat_id=chat_id,
                            message_id=thinking_msg_id,
                            text=error_text
                        )
                    except:
                        await bot.send_message(
                            chat_id=chat_id,
                            text=error_text,
                            notify=True
                        )
                else:
                    await bot.send_message(
                        chat_id=chat_id,
                        text=error_text,
                        notify=True
                    )
                
                logger.warning(f"No results found for query '{text}' from chat {chat_id}")
        
        except Exception as e:
            logger.error(f"Error processing question: {e}", exc_info=True)
            
            # Send error message
            error_text = (
                "‚ö†Ô∏è –ü—Ä–æ–∏–∑–æ—à–ª–∞ –æ—à–∏–±–∫–∞ –ø—Ä–∏ –ø–æ–∏—Å–∫–µ –æ—Ç–≤–µ—Ç–∞.\n\n"
                "–ü–æ–ø—Ä–æ–±—É–π—Ç–µ –ø–æ–∑–∂–µ –∏–ª–∏ –æ–±—Ä–∞—Ç–∏—Ç–µ—Å—å –∫ –∞–¥–º–∏–Ω–∏—Å—Ç—Ä–∞—Ç–æ—Ä—É."
            )
            
            if thinking_msg_id:
                try:
                    await bot.edit_message(
                        chat_id=chat_id,
                        message_id=thinking_msg_id,
                        text=error_text
                    )
                except:
                    await bot.send_message(
                        chat_id=chat_id,
                        text=error_text,
                        notify=True
                    )
            else:
                await bot.send_message(
                    chat_id=chat_id,
                    text=error_text,
                    notify=True
                )
